@@ -26,8 +26,6 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 
 <a name="NOD1"></a>
 <a name="SEC_Top"></a>
-<a name="NOD1"></a>
-<a name="SEC_Top"></a>
 <table cellpadding="1" cellspacing="1" border="0">
 <tr><td valign="middle" align="left">[<a href="#SEC_Top" title="Cover (top) of document">Top</a>]</td>
 <td valign="middle" align="left">[<a href="#SEC_Contents" title="Table of contents">Contents</a>]</td>
@@ -1440,8 +1438,6 @@ A second one with accented char <a name="ANC3"></a>.
 </p><hr size="6">
 <a name="NOD86"></a>
 <a name="SEC84"></a>
-<a name="NOD86"></a>
-<a name="SEC84"></a>
 <table cellpadding="1" cellspacing="1" border="0">
 <tr><td valign="middle" align="left">[<a href="#SEC_Top" title="Cover (top) of document">Top</a>]</td>
 <td valign="middle" align="left">[<a href="#SEC_Contents" title="Table of contents">Contents</a>]</td>
@@ -1452,8 +1448,6 @@ A second one with accented char <a name="ANC3"></a>.
 <h3><a name="FOOT1" href="#DOCF1">(1)</a></h3>
 <p><a name="ANC1"></a>
 </p><hr size="1">
-<a name="NOD86"></a>
-<a name="SEC84"></a>
 <a name="NOD86"></a>
 <a name="SEC84"></a>
 <table cellpadding="1" cellspacing="1" border="0">
@@ -1566,8 +1560,6 @@ A second one with accented char <a name="ANC3"></a>.
 </li>
 </ul>
 <hr size="1">
-<a name="NOD86"></a>
-<a name="SEC84"></a>
 <a name="NOD86"></a>
 <a name="SEC84"></a>
 <table cellpadding="1" cellspacing="1" border="0">
