@@ -1509,10 +1509,11 @@ system that is ready for distribution to users.
 <p>  There are two basic commands for snapshots; one makes a
 snapshot with a given name, the other retrieves a named snapshot.
 </p><dl compact="compact">
-<p>
+<dd><p>
 <a name="IDX613"></a>
 <a name="IDX614"></a>
-</p><dt><code> C-x v s <var>name</var> <kbd>RET</kbd>
+</p></dd>
+<dt><code> C-x v s <var>name</var> <kbd>RET</kbd>
 </code></dt>
 <dd><p>Define the last saved versions of every registered file in or under the
 current directory as a snapshot named <var>name</var>
